add hbs in dependences

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
   <title>About</title>
@@ -11,7 +12,6 @@
   <div class="main-content">
     {{>header}}
     <img class="portrait" src="/img/pic1.png" alt="">
-    <p>Created by: {{name}}</p>
   </div>
 
   {{>footer}}
