--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
   <title>Weather</title>
-  <link rel="icon" href="img/weather.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="/img/weather.png">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -23,6 +24,7 @@
   </div>
 
   {{>footer}}
+  
   <script src="/js/app.js"></script>
 </body>
 
